--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,8 @@
         }
       }
     ],
+    "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off",
     "react/jsx-one-expression-per-line": "off",
     "camelcase": "off",
     "react-hooks/rules-of-hooks": "error",
