--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,11 @@
     "es6": true
   },
   "extends": [
-    "plugin:react/recommended",
+    "airbnb",
+    // "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier/@typescript-eslint",
     "plugin:prettier/recommended",
-    "airbnb"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -30,6 +30,7 @@
   ],
   "rules": {
     "prettier/prettier": "error",
+    // "implicit-arrow-linebreak": "off",
     "object-curly-newline": [
       "error",
       {
@@ -40,7 +41,7 @@
         "ImportDeclaration": "never",
         "ExportDeclaration": {
           "multiline": true,
-          "minProperties": 3
+          "minProperties": 4
         }
       }
     ],
