--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,7 @@
       }
     ],
     "no-useless-constructor": "off",
+    "no-unused-expressions": "off",
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
     "@typescript-eslint/camelcase": "off",
