--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
   ],
   "rules": {
     "react/jsx-props-no-spreading": "off",
+    "import/prefer-default-export": "off",
     "react/prop-types": "off",
     "react/jsx-one-expression-per-line": "off",
     "camelcase": "off",
@@ -43,11 +44,12 @@
         ]
       }
     ],
-    "no-useless-constructor": "off",
+    "no-unused-vars": "off",
     "no-unused-expressions": "off",
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
     "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
