--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,7 +51,7 @@
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/no-unused-vars": [
-      "error",
+      "off",
       {
         "argsIgnorePattern": "_"
       }
