--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,12 +23,9 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "react-hooks",
-    "prettier"
-  ],
+  "plugins": ["@typescript-eslint", "react-hooks", "prettier"],
   "rules": {
+    "import/no-duplicates": "off",
     "react/jsx-props-no-spreading": "off",
     "import/prefer-default-export": "off",
     "react/prop-types": "off",
@@ -39,9 +36,7 @@
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [
-          ".tsx"
-        ]
+        "extensions": [".tsx"]
       }
     ],
     "no-unused-vars": "off",
